main.invoke(theObject, Boolean.valueOf(propertyValue));